--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head  th:replace="_fragments :: head(~{::title})">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>关于我</title>
+  <title>About Me</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../static/css/me.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
-  <!--导航-->
-  <nav th:replace="_fragments :: menu(5)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
-    <div class="ui container">
-      <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">Blog</h2>
-        <a href="#" class=" m-item item m-mobile-hide"><i class="mini home icon"></i>首页</a>
-        <a href="#" class=" m-item item m-mobile-hide"><i class="mini idea icon"></i>分类</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini tags icon"></i>标签</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class="mini clone icon"></i>归档</a>
-        <a href="#" class="active m-item item m-mobile-hide"><i class="mini info icon"></i>关于我</a>
-        <div class="right m-item item m-mobile-hide">
+<!--导航-->
+<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <div class="ui container">
+    <div class="ui inverted secondary stackable menu">
+      <h2 class="ui teal header item">Blog</h2>
+      <a href="#" th:href="@{/}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Home</a>
+      <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+      <a href="#" th:href="@{/tags/-1}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
+      <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide"><i class=" clone icon"></i>Archive</a>
+      <a href="#" th:href="@{/about}" class="active m-item item m-mobile-hide"><i class=" info icon"></i>About Me</a>
+      <div class="right m-item item m-mobile-hide">
+        <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
-            <input type="text" placeholder="Search....">
-            <i class="search link icon"></i>
+            <input type="text" name="query" placeholder="Search...." th:value="${query}">
+            <i onclick="document.forms['search'].submit()" class="search link icon"></i>
           </div>
-        </div>
+        </form>
       </div>
     </div>
-    <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-      <i class="sidebar icon"></i>
-    </a>
-  </nav>
+  </div>
+  <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
+    <i class="sidebar icon"></i>
+  </a>
+</nav>
 
   <!--中间内容-->
   <div  class="m-container m-padded-tb-big animated fadeIn">
@@ -39,40 +41,38 @@
       <div class="ui stackable grid">
         <div class="eleven wide column">
           <div class="ui segment">
-            <img src="https://unsplash.it/800/600?image=1005" alt="" class="ui rounded image">
+            <img src="/images/aboutme.jpg" alt="" class="ui rounded image">
           </div>
         </div>
         <div class="five wide column">
           <div class="ui top attached segment">
-            <div class="ui header">关于我</div>
+            <div class="ui header">About Me</div>
           </div>
           <div class="ui attached segment">
-            <p class="m-text">李仁密，一个独立开发者，折腾在 0 和 1 世界的大叔；一个终身学习者，誓将学习无限循环. 希望结识可以共同成长的小伙伴.</p>
-            <p class="m-text">热爱编程，喜欢折腾，正在探索高效学习编程技术的方法...</p>
+            <p class="m-text">Allen, a graduate student from Santa Clara University majored in Computer Science and Engineering. </p>
+            <p class="m-text">I am familiar with Java, Spring, SpringMVC, JavaScript, node.js as well as some popular frameworks.</p>
           </div>
           <div class="ui attached segment">
-            <div class="ui orange basic left pointing label">编程</div>
-            <div class="ui orange basic left pointing label">写作</div>
-            <div class="ui orange basic left pointing label">思考</div>
-            <div class="ui orange basic left pointing label">运动</div>
+            <div class="ui orange basic left pointing label">Programming</div>
+            <div class="ui orange basic left pointing label">Writing</div>
+            <div class="ui orange basic left pointing label">Thinking</div>
           </div>
           <div class="ui attached segment">
             <div class="ui teal basic left pointing label m-margin-tb-tiny">Java</div>
             <div class="ui teal basic left pointing label m-margin-tb-tiny">JavaScript</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">Node</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">React</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">RN</div>
+            <div class="ui teal basic left pointing label m-margin-tb-tiny">Spring</div>
+            <div class="ui teal basic left pointing label m-margin-tb-tiny">SpringMVC</div>
             <div class="ui teal basic left pointing label m-margin-tb-tiny">MYSQL</div>
-            <div class="ui teal basic left pointing label m-margin-tb-tiny">...</div>
+            <div class="ui teal basic left pointing label m-margin-tb-tiny">JavaScript</div>
           </div>
           <div class="ui bottom attached segment">
-            <a href="#" class="ui circular icon button"><i class="github icon"></i></a>
+            <a href="https://github.com/naiveallen" target="_blank" class="ui circular icon button"><i class="github icon"></i></a>
             <a href="#" class="ui wechat circular icon button"><i class="weixin icon"></i></a>
-            <a href="#" class="ui qq circular icon button" data-content="865729312" data-position="bottom center"><i class="qq icon"></i></a>
+            <a href="#" class="ui qq circular icon button" data-content="445970779" data-position="bottom center"><i class="qq icon"></i></a>
           </div>
 
           <div class="ui wechat-qr flowing popup transition hidden">
-            <img src="../static/images/wechat.jpg" alt="" class="ui rounded image" style="width: 110px">
+            <img src="/images/wechat.jpg" alt="" class="ui rounded image" style="width: 110px">
           </div>
           </div>
       </div>
@@ -83,13 +83,13 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -118,10 +118,9 @@
     </div>
 
   </footer>
-  <!--/*/<th:block th:replace="_fragments :: script">/*/-->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-  <!--/*/</th:block>/*/-->
+
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
 
   <script>
     $('.menu.toggle').click(function () {
