--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,11 +14,11 @@
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Blog</h2>
-        <a href="#" th:href="@{/}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>首页</a>
-        <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/tags/-1}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
-        <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide"><i class=" clone icon"></i>归档</a>
-        <a href="#" th:href="@{/about}" class="m-item item m-mobile-hide"><i class=" info icon"></i>关于我</a>
+        <a href="#" th:href="@{/}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>Home</a>
+        <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/tags/-1}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
+        <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide"><i class=" clone icon"></i>Archive</a>
+        <a href="#" th:href="@{/about}" class="m-item item m-mobile-hide"><i class=" info icon"></i>About Me</a>
         <div class="right m-item item m-mobile-hide">
           <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
             <div class="ui icon inverted transparent input m-margin-tb-tiny">
@@ -44,10 +44,10 @@
           <div class="ui top attached segment">
             <div class="ui middle aligned two column grid">
               <div class="column">
-                <h3 class="ui teal header">博客</h3>
+                <h3 class="ui teal header">Blogs</h3>
               </div>
               <div class="right aligned column">
-                共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h2> 篇
+                Total:&nbsp;&nbsp;&nbsp;<h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}">  </h2>
               </div>
             </div>
           </div>
@@ -58,31 +58,31 @@
             <div class="ui padded vertical segment m-padded-tb-large" th:each="blog : ${page.content}">
               <div class="ui middle aligned mobile reversed stackable grid" >
                 <div class="eleven wide column">
-                  <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
-                  <p class="m-text" th:text="|${blog.content}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+                  <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="m-black" th:text="${blog.title}"></a></h3>
+                  <p class="m-text" th:text="|${blog.content}......|"></p>
                   <div class="ui grid">
                     <div class="eleven wide column">
                       <div class="ui mini horizontal link list">
                         <div class="item">
                           <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">
-                          <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" >李仁密</a></div>
+                          <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" ></a></div>
                         </div>
                         <div class="item">
-                          <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
+                          <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}"></span>
                         </div>
                         <div class="item">
-                          <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
+                          <i class="eye icon"></i> <span th:text="${blog.views}"></span>
                         </div>
                       </div>
                     </div>
                     <div class="right aligned five wide column">
-                      <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}">认知升级</a>
+                      <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}"></a>
                     </div>
                   </div>
                 </div>
 
                 <div class="five wide column">
-                  <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+                  <a href="#" th:href="@{/blog/{id}(id=${blog.id})}">
                     <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.thumbnail}}"  alt="" class="ui rounded image">
                   </a>
                 </div>
@@ -114,7 +114,7 @@
             <div class="ui secondary segment">
               <div class="ui two column grid">
                 <div class="column">
-                  <i class="idea icon"></i>分类
+                  <i class="idea icon"></i>Type
                 </div>
                 <div class="right aligned column">
                   <a href="#" th:href="@{types/-1}" target="_blank">more <i class="angle double right icon"></i></a>
@@ -125,7 +125,7 @@
               <div class="ui fluid vertical menu" >
                 <a href="#" th:href="@{/types/{id}(id=${type.id})}" target="_blank" class="item"  th:each="type : ${types}">
                   <span th:text="${type.name}"></span>
-                  <div class="ui teal basic left pointing label" th:text="${#arrays.length(type.blogs)}">13</div>
+                  <div class="ui teal basic left pointing label" th:text="${#arrays.length(type.blogs)}"></div>
                 </a>
               </div>
             </div>
@@ -136,7 +136,7 @@
             <div class="ui secondary segment">
               <div class="ui two column grid">
                 <div class="column">
-                  <i class="tags icon"></i>标签
+                  <i class="tags icon"></i>Tag
                 </div>
                 <div class="right aligned column">
                   <a href="#" th:href="@{tags/-1}" target="_blank">more <i class="angle double right icon"></i></a>
@@ -153,7 +153,7 @@
           <!--最新推荐-->
           <div class="ui segments m-margin-top-large">
             <div class="ui secondary segment ">
-              <i class="bookmark icon"></i>最新推荐
+              <i class="bookmark icon"></i>Recommends
             </div>
             <div class="ui segment" th:each="blog : ${recommendBlogs}">
               <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black m-text-thin" th:text="${blog.title}"></a>
@@ -161,7 +161,7 @@
           </div>
 
           <!--二维码-->
-          <h4 class="ui horizontal divider header m-margin-top-large">扫码关注我</h4>
+          <h4 class="ui horizontal divider header m-margin-top-large">Follow Me</h4>
           <div class="ui centered card" style="width: 11em">
             <img src="/images/wechat.jpg" th:src="@{/images/wechat.jpg}" alt="" class="ui rounded image" >
           </div>
