--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -9,28 +9,30 @@
 </head>
 <body>
 
-  <!--导航-->
-  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
-    <div class="ui container">
-      <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">Blog</h2>
-        <a href="#" class="active m-item item m-mobile-hide"><i class=" home icon"></i>首页</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" clone icon"></i>归档</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" info icon"></i>关于我</a>
-        <div class="right m-item item m-mobile-hide">
+<!--导航-->
+<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <div class="ui container">
+    <div class="ui inverted secondary stackable menu">
+      <h2 class="ui teal header item">Blog</h2>
+      <a href="#" th:href="@{/}" class="m-item item m-mobile-hide"><i class=" home icon"></i>Home</a>
+      <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+      <a href="#" th:href="@{/tags/-1}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
+      <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide"><i class=" clone icon"></i>Archive</a>
+      <a href="#" th:href="@{/about}" class="m-item item m-mobile-hide"><i class=" info icon"></i>About Me</a>
+      <div class="right m-item item m-mobile-hide">
+        <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
-            <input type="text" placeholder="Search....">
-            <i class="search link icon"></i>
+            <input type="text" name="query" placeholder="Search...." th:value="${query}">
+            <i onclick="document.forms['search'].submit()" class="search link icon"></i>
           </div>
-        </div>
+        </form>
       </div>
     </div>
-    <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-      <i class="sidebar icon"></i>
-    </a>
-  </nav>
+  </div>
+  <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
+    <i class="sidebar icon"></i>
+  </a>
+</nav>
 
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big">
@@ -42,7 +44,7 @@
             <h3 class="ui teal header">Result</h3>
           </div>
           <div class="right aligned column">
-            共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}"> 14 </h2> 个
+            Total: &nbsp;&nbsp;&nbsp; <h2 class="ui orange header m-inline-block m-text-thin" th:text="${page.totalElements}"> </h2>
           </div>
         </div>
       </div>
@@ -53,31 +55,31 @@
         <div class="ui padded vertical segment m-padded-tb-large" th:each="blog : ${page.content}">
           <div class="ui middle aligned mobile reversed stackable grid" >
             <div class="eleven wide column">
-              <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}"></a></h3>
+              <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="m-black" th:text="${blog.title}"></a></h3>
               <p class="m-text" th:text="|${blog.content}......|"></p>
               <div class="ui grid">
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
                       <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">
-                      <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" >李仁密</a></div>
+                      <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" ></a></div>
                     </div>
                     <div class="item">
-                      <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
+                      <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}"></span>
                     </div>
                     <div class="item">
-                      <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
+                      <i class="eye icon"></i> <span th:text="${blog.views}"></span>
                     </div>
                   </div>
                 </div>
                 <div class="right aligned five wide column">
-                  <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}">认知升级</a>
+                  <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}"></a>
                 </div>
               </div>
             </div>
 
             <div class="five wide column">
-              <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+              <a href="#" th:href="@{/blog/{id}(id=${blog.id})}">
                 <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.thumbnail}}"  alt="" class="ui rounded image">
               </a>
             </div>
