--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>标签</title>
+  <title>Tag</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
-  <!--导航-->
-  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
-    <div class="ui container">
-      <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">Blog</h2>
-        <a href="#" class=" m-item item m-mobile-hide"><i class=" home icon"></i>首页</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" clone icon"></i>归档</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" info icon"></i>关于我</a>
-        <div class="right m-item item m-mobile-hide">
+<!--导航-->
+<nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <div class="ui container">
+    <div class="ui inverted secondary stackable menu">
+      <h2 class="ui teal header item">Blog</h2>
+      <a href="#" th:href="@{/}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Home</a>
+      <a href="#" th:href="@{/types/-1}" class="m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+      <a href="#" th:href="@{/tags/-1}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
+      <a href="#" th:href="@{/archives}" class="m-item item m-mobile-hide"><i class=" clone icon"></i>Archive</a>
+      <a href="#" th:href="@{/about}" class="m-item item m-mobile-hide"><i class=" info icon"></i>About Me</a>
+      <div class="right m-item item m-mobile-hide">
+        <form name="search" action="#" th:action="@{/search}" method="post" target="_blank">
           <div class="ui icon inverted transparent input m-margin-tb-tiny">
-            <input type="text" placeholder="Search....">
-            <i class="search link icon"></i>
+            <input type="text" name="query" placeholder="Search...." th:value="${query}">
+            <i onclick="document.forms['search'].submit()" class="search link icon"></i>
           </div>
-        </div>
+        </form>
       </div>
     </div>
-    <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
-      <i class="sidebar icon"></i>
-    </a>
-  </nav>
+  </div>
+  <a href="#" class="ui menu toggle black icon button m-right-top m-mobile-show">
+    <i class="sidebar icon"></i>
+  </a>
+</nav>
 
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big animated fadeIn">
@@ -39,17 +41,17 @@
       <div class="ui top attached segment">
         <div class="ui middle aligned two column grid">
           <div class="column">
-            <h3 class="ui teal header">标签</h3>
+            <h3 class="ui teal header">Tag</h3>
           </div>
           <div class="right aligned column">
-            共 <h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}"> 14 </h2> 个
+            Total: &nbsp;&nbsp;&nbsp;<h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}"> </h2>
           </div>
         </div>
       </div>
 
       <div class="ui attached segment m-padded-tb-large">
         <a href="#" th:href="@{/tags/{id}(id=${tag.id})}"  class="ui basic left pointing large label m-margin-tb-tiny" th:classappend="${tag.id==activeTagId} ? 'teal'" th:each="tag : ${tags}">
-          <span th:text="${tag.name}">方法论</span> <div class="detail" th:text="${#arrays.length(tag.blogs)}">23</div>
+          <span th:text="${tag.name}"></span> <div class="detail" th:text="${#arrays.length(tag.blogs)}"></div>
         </a>
       </div>
 
@@ -57,38 +59,38 @@
         <div class="ui padded vertical segment m-padded-tb-large" th:each="blog : ${page.content}">
           <div class="ui middle aligned mobile reversed stackable grid" >
             <div class="eleven wide column">
-              <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank" class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>
-              <p class="m-text" th:text="|${blog.content}......|">正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>
+              <h3 class="ui header" ><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" class="m-black" th:text="${blog.title}"></a></h3>
+              <p class="m-text" th:text="|${blog.content}......|"></p>
               <div class="ui grid">
                 <div class="row">
                   <div class="eleven wide column">
                     <div class="ui mini horizontal link list">
                       <div class="item">
                         <img src="https://unsplash.it/100/100?image=1005" th:src="@{${blog.user.avatar}}"  alt="" class="ui avatar image">
-                        <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" >李仁密</a></div>
+                        <div class="content"><a href="#" class="header" th:text="${blog.user.nickname}" ></a></div>
                       </div>
                       <div class="item">
-                        <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2017-10-01</span>
+                        <i class="calendar icon"></i><span th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}"></span>
                       </div>
                       <div class="item">
-                        <i class="eye icon"></i> <span th:text="${blog.views}">2342</span>
+                        <i class="eye icon"></i> <span th:text="${blog.views}"></span>
                       </div>
                     </div>
                   </div>
                   <div class="right aligned five wide column">
-                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}">认知升级</a>
+                    <a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin" th:text="${blog.type.name}"></a>
                   </div>
                 </div>
                 <div class="row">
                   <div class="column">
-                    <a href="#" th:href="@{/tags/{id}(id=${tag.id})}" class="ui  basic left pointing label m-padded-mini m-text-thin" th:classappend="${tag.id==activeTagId} ? 'teal'" th:each="tag : ${blog.tags}" th:text="${tag.name}">方法论</a>
+                    <a href="#" th:href="@{/tags/{id}(id=${tag.id})}" class="ui  basic left pointing label m-padded-mini m-text-thin" th:classappend="${tag.id==activeTagId} ? 'teal'" th:each="tag : ${blog.tags}" th:text="${tag.name}"></a>
                   </div>
                 </div>
               </div>
             </div>
 
             <div class="five wide column">
-              <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">
+              <a href="#" th:href="@{/blog/{id}(id=${blog.id})}">
                 <img src="https://unsplash.it/800/450?image=1005" th:src="@{${blog.thumbnail}}"  alt="" class="ui rounded image">
               </a>
             </div>
@@ -102,10 +104,10 @@
       <div class="ui bottom attached segment" th:if="${page.totalPages}>1">
         <div class="ui middle aligned two column grid">
           <div class="column">
-            <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}-1)}"  th:unless="${page.first}" class="ui mini teal basic button">上一页</a>
+            <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}-1)}"  th:unless="${page.first}" class="ui mini teal basic button">Last</a>
           </div>
           <div class="right aligned column">
-            <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}+1)}"  th:unless="${page.last}" class="ui mini teal basic button">下一页</a>
+            <a href="#" th:href="@{'/tags/'+${activeTagId}(page=${page.number}+1)}"  th:unless="${page.last}" class="ui mini teal basic button">Next</a>
           </div>
         </div>
       </div>
